# cv_processor

./: app.py  cv_information.xlsx  pyproject.toml  requirements.txt
templates/: upload_cv.html
