[tool.poetry]
name = "cv-processor"
version = "0.1.0"
description = ""
authors = ["Peaky_001 <shreyashdeshwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pandas = "^2.2.1"
pdfplumber = "^0.11.0"
openpyxl = "^3.1.2"
python-docx = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
